# Shazam-An-Industrial-Strength-Audio-Search-Algorithm-

./: .gitattributes  AudioLL.cpp  AudioLL.h  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile_serv  GetUnique.py  MTSHasher.cpp  MTSHasher.h  README.md  Shash.cpp  Shash.h  Shazam_hashing.cpp  Shazam_querying.longinput.cpp  audio_ban_shash  base.Dockerfile  build.sh  checkTP.py  code-format.sh  fir_api.c  hash_sysnc.py  kafka_push_HelloYo_Audio.py  kafka_push_hive.py  path.sh  path_shash.sh  readme.md  redis_config.yml  requirements.txt  server.cpp  service_script.conf  simple-server.py  single_query.py  sources.list  test.py  typedef.h  wav  webhook.sh
conf/: Info  Labels  generater.py  update_cm.sh  value.py
conf/DB_v1/: conf2_db.py
conf/Qry_v1/: conf2_qry.py
conf/Shazam/: conf1_sr8k_Shazam.py  conf3_Shazam.py
conf/configmap/bigolive/: bigolive-audio-dev.conf  bigolive-audio.conf  bigolive-avatar-dev.conf  bigolive-avatar-prod.conf  bigolive-bar-image-dev.conf  bigolive-bar-image-prod.conf  bigolive-bar-video-dev.conf  bigolive-bar-video-prod.conf  bigolive-card-dev.conf  bigolive-card.conf  bigolive-cover-changed-dev.conf  bigolive-cover-changed-prod.conf  bigolive-cover-dev.conf  bigolive-cover-prod.conf  bigolive-family-groupchat-dev.conf  bigolive-family-groupchat.conf  bigolive-gift-snapshot-dev.conf  bigolive-gift-snapshot.conf  bigolive-groupchat-avatar-dev.conf  bigolive-groupchat-avatar.conf  bigolive-groupchat-dev.conf  bigolive-groupchat.conf  bigolive-screenshot-video-dev.conf  bigolive-screenshot-video.conf  test
conf/configmap/hello/: fanshu-audio-dev.conf  fanshu-audio.conf  hello-audio-dev.conf  hello-audio-dx.conf  hello-audio-lt.conf  hello-audio-oversea.conf  hello-audio-yd.conf  hello-avatar-dev.conf  hello-avatar.conf  hello-school-dev.conf  hello-school-radio-station-dev.conf  hello-school-radio-station.conf  hello-school.conf  yuanyuan-audio-dev.conf  yuanyuan-audio.conf
conf/configmap/helloyo/: .helloyo-audio-dev.conf  helloyo-audio-dev.conf  helloyo-audio.conf  helloyo-avatar-dev.conf  helloyo-avatar.conf  helloyo-family-pic-dev.conf  helloyo-family-pic.conf
conf/configmap/imo/: imo-ads-dev.conf  imo-ads.conf  imo-audio-dev.conf  imo-audio.conf  imo-avatar-dev.conf  imo-avatar.conf  imo-board-post-dev.conf  imo-board-post.conf  imo-clubhouse-audio-dev.conf  imo-clubhouse-audio.conf  imo-clubhouse-pic-dev.conf  imo-clubhouse-pic.conf  imo-discovery-dev.conf  imo-discovery.conf  imo-fof-dev.conf  imo-fof.conf  imo-group-chat-image-dev.conf  imo-group-chat-image.conf  imo-group-chat-video-dev.conf  imo-group-chat-video.conf  imo-group-space-dev.conf  imo-group-space.conf  imo-groupinfo-dev.conf  imo-groupinfo.conf  imo-live-cover-change-dev.conf  imo-live-cover-change.conf  imo-live-cover-dev.conf  imo-live-cover.conf  (+2 more)
conf/template/: deploy.yaml  hpa.yaml  monitor.yaml  route.yaml
data/AllDatabase/: wav.scp
data/DB_v1/: shash.scp
data/KnownPositiveNegatives/: qry2db2label  wav.scp
data/Qry_v1/: qry2db  shash.scp  wav.scp
data/database/: wav.scp  wav_add.scp  wav_delete.scp
data/query_long/: wav.scp
data/query_short/: wav.scp
decode_video/: decoder.py
doc/: 生产环境计算资源申请.md  监控系统接入说明_其他.docx  程序效率评估.md
include/: md5.h  util.h
model/: Labels
proto/: audio_feature.proto  config.proto  config_module.proto  config_submodule.proto  hive.proto  inner_keywords.proto  kakashi.proto  keywords_search_v2.proto  live_adaptor.proto  module.proto  normalization_message.proto  ocr_nlp_keywords.proto  proxy.proto  submodule.proto  util.proto
py/: Dockerfile  keywords.endpoints  srv.py  test.py
shash/: FastAudioShashManager.cpp  FastAudioShashManager.h  Shash.cpp  Shash.h
src/: AudioLL.cpp  AudioLL.h  Shash.cpp  Shash.h  Shazam_hashing.cpp  Shazam_querying.cpp  audio_db.h  channel_manager.cpp  channel_manager.h  fir_api.h  kafka_callback.cpp  kafka_callback.h  main.cpp  pika_client.cpp  pika_client.h  server_feat.cpp  shash_class.cpp  shash_class.h  version.h
src/adaptor/: like_kafka_consumer.cpp  like_kafka_consumer.h  like_review.cpp  like_review.h  live_kafka_consumer.cpp  live_kafka_consumer.h  live_review.cpp  live_review.h
src/encode_audio/: encode_audio.h
src/module/: content.cpp  content.h  decode_cluster_downloader.cpp  decode_cluster_downloader.h  dispatcher.cpp  dispatcher.h  downloader.cpp  downloader.h  duplicated.cpp  duplicated.h  duration_filter.cpp  duration_filter.h  end.cpp  end.h  isp_filter.cpp  isp_filter.h  kafka_client.cpp  kafka_client.h  modify_fail_res.cpp  modify_fail_res.h  module.h  sort.cpp  sort.h  timestamp_filter.cpp  timestamp_filter.h
src/submodule/: asr.cpp  asr.h  asr_v2.cpp  asr_v2.h  asr_v3.cpp  asr_v3.h  audio_audit_shash.cpp  audio_audit_shash.h  audio_core.cpp  audio_core.h  basic_submodule.cpp  basic_submodule.h  bigolive_bar_image_core.cpp  bigolive_bar_image_core.h  bigolive_bar_video_core.cpp  bigolive_bar_video_core.h  crawler_video.cpp  crawler_video.h  face_match.cpp  face_match.h  feature_match.cpp  feature_match.h  gulf_asr.cpp  gulf_asr.h  hello_face_audit.cpp  hello_face_audit.h  image_core.cpp  image_core.h  image_normalization.cpp  image_normalization.h  image_ocr.cpp  image_ocr.h  image_watermark.cpp  image_watermark.h  image_watermark_imo.cpp  image_watermark_imo.h  imo_discover.cpp  imo_discover.h  imo_fakevideo.cpp  imo_fakevideo.h  (+29 more)
src/uploader/: review.cpp  review.h  upload_fdfs.cpp  upload_fdfs.h  upload_hive.cpp  upload_hive.h
src/utils/: base64.h  block_queue.h  codec_util.h  common_utils.cpp  common_utils.h  like_effect.h  sidecar_proxy.cpp  sidecar_proxy.h
utils/: AlignCropOutputs.py  Combine.py  ConvertRaw2Wav.py  ForModerationTeam.py  GetStats.py  GetWav.py  Hashing.py  Hashing_update.py  Matching.py  MatchingTimer.py  ReadWavScp.py  VisualiseFFT.py  WgetRawFiles.py  _Shazam_.py  _helper_basics_.py  combineLUT.py  conf.py  no_user_info_decoder
utils/.deprecated/: Shazam_hashing.old.8k.cropped.cpp  Shazam_querying.cpp  Shazam_querying_Full.cpp
utils/TarFiles/: sndfile-tools-1.04.tar.bz2
utils/Timer/: Hashing.py  Matching.py
(+176 files in other folders)
